--- a/weather.css
+++ b/weather.css
@@ -28,6 +28,11 @@ body {
   padding: 8px 16px 4px 16px;
 }
 
+.myForm {
+  display: flex;
+  flex-direction: column;
+}
+
 .temp {
   display: flex;
   flex-direction: row;
@@ -42,12 +47,13 @@ body {
 }
 
 .weatherBtn {
-  background-color: rgb(143, 226, 243);
+  background-color: rgb(155, 193, 255);
   border: 1px black solid;
   padding: 8px 36px;
   max-width: 320px;
   align-self: center;
   justify-self: center;
+  margin-top: 12px;
 }
 
 .weatherBtn:hover {
